--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,14 @@
 .wrapper h1{
     margin-top: 30px;
     text-align: center;
+    color: wheat;
 }
 
 .wrapper p{
     text-align: center;
     margin-top: 7px;
     font-weight: bold;
+    background-color: wheat;
 }
 
 .wrapper .main{
@@ -25,10 +27,11 @@
     align-items: center;
 }
 
+
 .wrapper .form-container{
     width: 500px;
     height: 340px;
-    background-color: #e4e4e4;
+    background-color:burlywood;
     margin: 20px auto;
     padding: 20px;   
 }
@@ -39,7 +42,7 @@
 
 .wrapper .view-container{
     width: 600px;    
-    background-color: #e4e4e4;
+    background-color: blanchedalmond;
     margin: 20px auto;
     padding: 20px;
     display: flex;
